--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -8,16 +8,26 @@
     <style>
         body {
             height: 100vh; /* altura da view port*/
+            /*
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
-            background-position: center top;
+            background-position: center center;
             background-repeat: no-repeat;
-            background-size: cover; /* para preencher a tela intera mesmo q corte a img*/
+            background-size: cover; -> para preencher a tela intera mesmo q corte a img
+            background-attachment: fixed; -> para o fundo ficar fixo e não rolar
+            */
+
+            /* Shorthand - background (nessa ordem)
+                 color image position repeat size attachment
+            */
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+            background-size: cover; /* size ainda nao funciona na shorthand, aplicar a parte*/
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;   
             border: 1px solid darkblue;
@@ -29,6 +39,10 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae fugit provident amet odio accusantium iusto veritatis! Distinctio facere illo animi voluptates minima vitae perferendis. Libero vero iure aspernatur alias eveniet! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum nisi cum voluptate, laborum architecto deserunt esse eaque provident sed tenetur voluptates error, incidunt tempora debitis. Numquam dolor adipisci illum optio. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium illum dolorem error accusantium enim vitae dolor, tenetur nostrum aliquam, aut iure! Corrupti quae eos ea tempora dolore assumenda blanditiis ipsam.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae fugit provident amet odio accusantium iusto veritatis! Distinctio facere illo animi voluptates minima vitae perferendis. Libero vero iure aspernatur alias eveniet! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum nisi cum voluptate, laborum architecto deserunt esse eaque provident sed tenetur voluptates error, incidunt tempora debitis. Numquam dolor adipisci illum optio. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium illum dolorem error accusantium enim vitae dolor, tenetur nostrum aliquam, aut iure! Corrupti quae eos ea tempora dolore assumenda blanditiis ipsam.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae fugit provident amet odio accusantium iusto veritatis! Distinctio facere illo animi voluptates minima vitae perferendis. Libero vero iure aspernatur alias eveniet! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum nisi cum voluptate, laborum architecto deserunt esse eaque provident sed tenetur voluptates error, incidunt tempora debitis. Numquam dolor adipisci illum optio. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium illum dolorem error accusantium enim vitae dolor, tenetur nostrum aliquam, aut iure! Corrupti quae eos ea tempora dolore assumenda blanditiis ipsam.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae fugit provident amet odio accusantium iusto veritatis! Distinctio facere illo animi voluptates minima vitae perferendis. Libero vero iure aspernatur alias eveniet! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum nisi cum voluptate, laborum architecto deserunt esse eaque provident sed tenetur voluptates error, incidunt tempora debitis. Numquam dolor adipisci illum optio. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium illum dolorem error accusantium enim vitae dolor, tenetur nostrum aliquam, aut iure! Corrupti quae eos ea tempora dolore assumenda blanditiis ipsam.</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae fugit provident amet odio accusantium iusto veritatis! Distinctio facere illo animi voluptates minima vitae perferendis. Libero vero iure aspernatur alias eveniet! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum nisi cum voluptate, laborum architecto deserunt esse eaque provident sed tenetur voluptates error, incidunt tempora debitis. Numquam dolor adipisci illum optio. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium illum dolorem error accusantium enim vitae dolor, tenetur nostrum aliquam, aut iure! Corrupti quae eos ea tempora dolore assumenda blanditiis ipsam.</p>
     </main>
 </body>
