--- a/desafios/d012/index.html
+++ b/desafios/d012/index.html
@@ -73,7 +73,7 @@
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
             Mandava no mês de Junho <br>
-            Só chegava no Verão <br>
+            Só chegava no verão <br>
             Mas matava a saudade <br>
             Era texto de verdade <br>
             Nas linhas do coração. <br>
