--- a/desafios/d013/tabela2.html
+++ b/desafios/d013/tabela2.html
@@ -21,7 +21,7 @@
         }
     </style>
 </head>
-<body> colspan="2" rowspan="3"
+<body> 
     <h1>Mesclagem de Células</h1>
     <table>
         <tr>
